ingress/default-backend.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
     name: default-http-backend
     labels:
        k8s-app: default-http-backend
     namespace: ingress-nginx
spec:
     replicas: 1
     template:
        metadata:
           labels:
              k8s-app: default-http-backend
        spec:
           terminationGracePeriodSeconds: 60
           containers:
           - name: default-http-bakcend
             image: hub.docker.zwq.io:5000/defaultbackend:1.0
             livenessProbe:
                     httpGet:
                        path: /healthz
                        port: 8080
                        scheme: HTTP
                     initialDelaySeconds: 30
                     timeoutSeconds: 5
             ports:
             - containerPort: 8080
             resources:
                  limits:
                     cpu: 10m
                     memory: 20Mi
                  requests:
                     cpu: 10m
                     memory: 20Mi
