ingress/nginx-ingress-daemonset.yaml
apiVersion: extensions/v1beta1
kind: DaemonSet
metadata: 
   name: nginx-ingress-lb
   labels: 
    name: nginx-ingress-lb
   namespace: kube-system
spec:
    template:
      metadata:
          labels:
           name:  nginx-ingress-lb
      spec:
          hostNetwork: true
          serviceAccountName: ingress
          terminationGracePeriodSeconds: 60
          volumes:
          - name: presistent-storage
            hostPath:
             path: /data/log
             type: ""
          containers:
          - image: hub.docker.zwq.io:5000/nginx-ingress-controller:0.9.0-beta.2
            name: nginx-ingress-lb
            readinessProbe:
                 httpGet:
                     path: /healthz
                     port: 10254
                     scheme: HTTP
            livenessProbe: 
                 httpGet:
                      path: /healthz
                      port: 10254
                      scheme: HTTP
                 initialDelaySeconds: 10
                 timeoutSeconds: 1
            ports:
            -    containerPort: 80
                 hostPort: 80
            -    containerPort: 443
                 hostPort: 443
            args:
            - /nginx-ingress-controller
            - --default-backend-service=$(POD_NAMESPACE)/default-http-backend
            volumeMounts:
              - mountPath: /var/log/nginx
                name: presistent-storage
