ingress/default-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
   name: default-http-backend
   namespace: ingress-nginx
   labels:
       k8s-app: default-http-backend
spec:
    ports:
    - port: 80
      targetPort: 8080
    selector:
       k8s-app: default-http-backend
