ingress/mywebsite-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: mywebsite-ingress
spec:
 rules:
 - host: mywebsite.com
   http:
    paths:
    - path: /demo
      backend:
       serviceName: myweb
       servicePort: 8080
